--- a/workflow_configs/mvr_analysis_flow.yaml
+++ b/workflow_configs/mvr_analysis_flow.yaml
@@ -83,17 +83,17 @@ stages:
     # Routing Logic
     routing:
       - condition: "classification == 'vst' OR classification == 'mvr'"
-        destination: "../mvr_qa/"
+        destination: "mvr_qa/"
         action: "move_file"
-        
-      - condition: "classification != 'vst' AND classification != 'mvr'"  
-        destination: "../que/"
+
+      - condition: "classification != 'vst' AND classification != 'mvr'"
+        destination: "queue/"
         action: "move_file"
         reason: "Non-class documents queued for manual review"
-        
+
       - condition: "noise_factor > 0.7"
-        destination: "../que/"
-        action: "move_file" 
+        destination: "queue/"
+        action: "move_file"
         reason: "High noise factor - manual review required"
 
   # Stage 2: MVR QA - Comparison Analysis  
@@ -138,11 +138,11 @@ stages:
     
     routing:
       - condition: "processing_complete == true AND quality_score > 0.8"
-        destination: "../mvr_peer/"
+        destination: "mvr_peer/"
         action: "move_file"
-        
+
       - condition: "processing_complete != true OR quality_score <= 0.8"
-        destination: "../que/"
+        destination: "queue/"
         action: "move_file"
         reason: "Incomplete processing or low quality score"
 
@@ -193,7 +193,7 @@ stages:
     
     routing:
       - condition: "triangulation_complete == true"
-        destination: "../mvr_report/"
+        destination: "mvr_report/"
         action: "move_file"
 
   # Stage 4: MVR Report - Final Output Generation
@@ -228,7 +228,7 @@ stages:
     
     routing:
       - condition: "all_outputs_generated == true"
-        destination: "../completed/"
+        destination: "completed/"
         action: "move_file"
         cleanup: true
 
