Update .gitignore with Windows special device names
Replace generic *nul* pattern with specific Windows reserved device names (nul, con, prn, aux, com[1-9], lpt[1-9]) to prevent accidental creation and tracking of these files from misdirected command output.

--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,15 @@ old-*
 _*
 # C extensions
 *.so
-*nul*
+
+# Windows special device names (accidentally created)
+nul
+con
+prn
+aux
+com[1-9]
+lpt[1-9]
+
 qaz*
 
 
